# better-aws

./: README.md  main.py  pyproject.toml
.github/workflows/: release.yml
src/better_aws/: __init__.py  aws_wrapper.py
src/better_aws/services/: errors.py  pattern.py  s3.py  serialization.py  tree.py
src/better_aws/services/s3/: s3.py  s3_erros.py  s3_exec.py  s3_pattern.py  s3_planner.py  s3_serialization.py  s3_tree.py
tests/: test_s3_integration.py
