[project]
name = "better-aws"
version = "0.5.0"
description = "Minimal AWS boto3 wrapper"
readme = "README.md"
authors = [
    { name = "Thibault Charbonnier", email = "thibault.charbonnier@ensae.fr" }
]
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.48",
    "pandas>=3.0.0",
    "polars>=1.38.1",
    "pyarrow>=23.0.0",
    "rich>=14.3.2",
    "dotenv>=0.9.9",
]

[project.optional-dependencies]
objects = [
  "joblib>=1.5.3",
  "skops>=0.13.0",
]

[dependency-groups]
dev = [
  "better-aws[objects]",
]
